@@ -361,6 +361,9 @@ Trunk (unreleased changes)
     HADOOP-5854. Fix a few "Inconsistent Synchronization" warnings in HDFS.
     (Raghu Angadi)
 
+    HADOOP-5369. Small tweaks to reduce MapFile index size. (Ben Maurer 
+    via sharad)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
